--- a/index.html
+++ b/index.html
@@ -225,8 +225,13 @@ Wer freuen uns, dich kennenzulernen!
                             </h3><h5><i class="fa fa-home"></i> München</h5>
                             <span>Dating- und Beziehungs-coaching mit ganzheitlichem & nachhaltigem Ansatz
                             </span> <br/><br/>
-                            <span>Dein Weg vom ersten Date zur langfristigen Partnerschaft. Bist du es leid, immer wieder die falschen Partner zu daten oder dich in Beziehungen zu verlieren, die nicht zu dir passen? Du steckst in denselben alten Mustern fest, obwohl du alles anders machen willst – und fragst dich, warum du immer wieder den gleichen Fehler machst? Das ist kein Zufall, sondern ein unbewusstes Programm, das dich sabotiert.
-                                Als traumasensitive Beziehungscoachin und Yoga-Psychotherapeutin helfe ich dir, diese Blockaden zu knacken. Schluss mit leeren Ratschlägen – es geht um echte Veränderung - Es ist Zeit, neue Wege zu gehen und das Dating und Beziehungen zu erleben, wie du es dir immer gewünscht hast.
+                            <span>Vom ersten Date zur langfristigen Partnerschaft – bewusst, reflektiert und mit Substanz.
+                                Hinter wiederkehrenden Beziehungsmustern stecken oft unbewusste Prägungen – solange sie nicht erkannt werden, wiederholen sie sich.
+                                Als traumasensitive Beziehungscoachin und Yoga-Psychotherapeutin begleite ich dich dabei, diese Zusammenhänge zu verstehen und gezielt zu verändern.
+                                Ich arbeite mit reflektierten Menschen, die im Leben viel erreicht haben – und dennoch in Beziehungen an Grenzen stoßen. So wie ich es selbst erlebt habe.
+                                Seit über 15 Jahren bin ich verheiratet, Mutter – mit allen Höhen, Tiefen und Entwicklungsschritten, die dazu gehören.
+                                Was du bei mir bekommst: Tiefe, Klarheit, Struktur – statt Floskeln.
+                                Ziel ist nicht Perfektion – sondern echte Verbindung.
                                 
                                 </span>
                         </div> 
