--- a/impressum.html
+++ b/impressum.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="webthemez">
-    <title>Healthy Love Coaching</title>
+    <title>Dein Beziehungscoaching</title>
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -46,53 +46,55 @@
         </nav><!--/nav-->
     </header><!--/header-->
 
-    <section id="hero-banner">
              <div class="banner-inner">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12"> 
-                                    <h2>Healthy Love <b>COACHING</b></h2>
-                                    <p>Traumasensibles Beziehungschoaching <br/> Für alle.</p>
-                                    <a class="btn btn-primary btn-lg" href="#">Schreib uns</a>
-                                
+                   <br/><br/><br/><br/><br/>
+                   <b>Impressum</b>
+                   <br/> Angaben gemäß § 5 TMG<br/>
+                   Esma Zehra Özdemir <br/>
+                   6th floor<br/>
+Erna-Scheffler- Straße 1a<br/>
+51103 Köln <br/>
+<br/>
+Kontakt<br/>
+Telefon: +49 221 65083151<br/>
+E-Mail: esma-z.oezdemir[at]gmx.de<br/>
+<br/>
+<b>EU-Streitschlichtung</b><br/>
+Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: https://ec.europa.eu/consumers/odr/.
+Unsere E-Mail-Adresse finden Sie oben im Impressum.<br/>
+<br/>
+<b>Verbraucher­streit­beilegung/Universal­schlichtungs­stelle</b><br/>
+Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
+<br/><br/><br/>
+
+
+                                   
                             </div>
                         </div>
                     </div>
                 </div>
-    </section><!--/#main-slider-->
+  
 
-<body id="home">
-<b>Impressum</b>
 
-Anbieter:
-Norbert Peter e.K. 
-Bundesallee 92 
-12161 Berlin 
-
-Kontakt:
-Telefon 030 / 8516305 
-Fax 030 / 85999588
 
 <footer id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                &copy; 2025 Healthy Love Coaching</a>
+            <div class="col-sm-8">
+                &copy; 2025 DeinBeziehungscoaching.de</a>
             </div>
             <div class="col-sm-2">
                 <a href="./impressum.html">Impressum</a>
             </div>
             <div class="col-sm-2">
-                <a href="./impressum.html">Datenschutz</a>
+                <a href="./datenschutz.html">Datenschutz</a>
             </div>
             <div class="col-sm-4">
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+ 
                 </ul>
             </div>
         </div>
