--- a/impressum.html
+++ b/impressum.html
@@ -67,7 +67,11 @@ Unsere E-Mail-Adresse finden Sie oben im Impressum.<br/>
 <br/>
 <b>Verbraucher­streit­beilegung/Universal­schlichtungs­stelle</b><br/>
 Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
-<br/><br/><br/>
+<br/><br/>
+
+<b>Website:</b> <br/>
+Uses theme from webthemez.com licenced under the Creative Commons Attribution 4.0 <br/>
+Uses pictures from pixabay.com licenced under https://pixabay.com/service/license-summary <br/><br/>
 
 
                                    
