--- a/index.html
+++ b/index.html
@@ -485,6 +485,10 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
                         <div class="contact-form">
                        
                             <form id="main-contact-form" name="contact-form" method="post" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com">
+                                    <!-- Weiterleitung nach dem Absenden -->
+    <input type="hidden" name="_next" value="https://deinbeziehungscoaching.de/danke.html">
+    <!-- Captcha deaktivieren -->
+    <input type="hidden" name="_captcha" value="false">
                                 <div class="form-group">
                                     <input type="text" name="name" class="form-control" placeholder="Name" required>
                                 </div>
