--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
                        
                             <form id="main-contact-form" name="contact-form" method="post" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com">
                                     <!-- Weiterleitung nach dem Absenden -->
-    <input type="hidden" name="_next" value="https://deinbeziehungscoaching.de/danke.html">
+    <input type="hidden" name="_next" value="./danke.html">
     <!-- Captcha deaktivieren -->
     <input type="hidden" name="_captcha" value="false">
                                 <div class="form-group">
