--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    &copy; 2025 DeineBeziehungscoaches.de</a>
+                    &copy; 2025 DeinBeziehungscoaching.de</a>
                 </div>
                 <div class="col-sm-2">
                     <a href="./impressum.html">Impressum</a>
