--- a/index.html
+++ b/index.html
@@ -484,9 +484,9 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
                     <div class="col-sm-8 col-md-8">
                         <div class="contact-form">
                        
-                            <form id="main-contact-form" name="contact-form" method="post" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com">
+                            <form id="main-contact-form" name="contact-form" method="POST" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com">
                                     <!-- Weiterleitung nach dem Absenden -->
-    <input type="hidden" name="_next" value="./danke.html">
+    <input type="hidden" name="_next" value="https://liecraze.github.io/coaching/danke.html">
     <!-- Captcha deaktivieren -->
     <input type="hidden" name="_captcha" value="false">
                                 <div class="form-group">
