--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
                     <div class="col-sm-8 col-md-8">
                         <div class="contact-form">
                        
-                            <form id="main-contact-form" name="contact-form" method="POST" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com">
+                            <form id="main-contact-form" name="contact-form" action="https://formsubmit.co/deinbeziehungscoaching@gmail.com" method="POST">
                                     <!-- Weiterleitung nach dem Absenden -->
     <input type="hidden" name="_next" value="https://liecraze.github.io/coaching/danke.html">
     <!-- Captcha deaktivieren -->
@@ -503,7 +503,7 @@ Ich freue mich sehr darauf, dich kennenzulernen und zu begleiten. Buche dir gern
                                 </div>
                                 <label><span class="privacy">
             <input type="checkbox" name="privacy" required>
-            Ich habe die <a href="./datenschutz.html" target="_blank">Datenschutzerklärung</a> gelesen und akzeptiere sie.
+            Ich habe die <a href="./datenschutz.html" target="_blank" class="privacy">Datenschutzerklärung</a> gelesen und akzeptiere sie.
             </label><br/></span>
                                 <button type="submit" class="btn btn-primary">Nachricht senden</button>
                             </form>
